# electron

./: DEPS  js2c_toolchain.gni
loongarch/: args.gn  loongarch64_support.patch  old_world.patch
patches/chromium/: .patches  add_informer.patch  bug_fix_crash_due_to_race_condition_auto_close_dialog.patch  enable_logging_by_default.patch  increase_limit_of_pa_allocations_to_32gb.patch  increase_pa_s_maxdirectmapped_size_to_32gb.patch  increase_partition_allocator_s_upper_bound_to_32gb.patch  increase_size_of_v8-heap_to_16gb.patch  logging_debug_info_to_exec_path_instead_of_cwd.patch  logging_debug_information_to_a_data_directory_of_electron.patch  support_loongarch.patch  support_loongarch_patch2.patch  support_loongarch_patch3.patch  unblock_access_of_mixed_contents.patch  unblock_all_insecure_content_by_--allow-running-insecure-content.patch  utf-8_q_remove_20unnecessary_20condition_20check_20after_20incr.patch
patches/v8/: .patches  add_new_field_to_memorystatus_reporter.patch  add_reporter.patch  fix_erros.patch  implement_memorystatus_reporters_and_new_builtin.patch  v8-typedarray_length_increase.patch
shell/browser/ui/: file_dialog_linux.cc
shell/common/gin_converters/: frame_converter.cc
